fixed problem with z-index

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,5 @@
 .container {
   text-align: center;
   padding: 32px;
+  letter-spacing: 3px;
 }
