--- a/src/components/Main-banner/Main-banner.css
+++ b/src/components/Main-banner/Main-banner.css
@@ -15,12 +15,12 @@
 
 .star {
   position: absolute;
+  z-index: 100;
   transition: transform 1s;
   animation: stars 1s ease-in-out infinite alternate-reverse;
 }
 
 .star:hover {
-  cursor: pointer;
   transform: rotate(360deg);  
 }
 
@@ -45,7 +45,7 @@
 
 .star4 {
   bottom: 10%;
-  right: 41%;
+  right: 31%;
 }
 
 .star5 {
@@ -103,6 +103,8 @@ header {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
+  position: relative;
+  z-index: 1;
 }
 
 .logo {
@@ -117,17 +119,23 @@ header h1 {
 
 .contact-link {
   color: aliceblue;
-  font-size: 30px;
+  font-size: 20px;
   text-decoration: none;
+  text-transform: uppercase;
+  font-family: GTWalsheimPro, sans-serif;
   width: 110px;
+  height: 40px;
   cursor: pointer;
 }
 
 .contact-link:hover {
   cursor: pointer;
+  color: rgb(255, 202, 104);
 }
 
 .main-banner__content {
+  position: relative;
+  z-index: 1;
   text-align: center;
   margin: 40px 0 100px;
 }
@@ -147,6 +155,8 @@ header h1 {
 }
 
 .main-banner__button {
+  position: relative;
+  z-index: 1;
   font-family: GTWalsheimPro, sans-serif;
   font-weight: 500;
   font-size: 20px;
@@ -157,4 +167,8 @@ header h1 {
   border-radius: 50px;
   padding: 20px 20px 25px;
   cursor: pointer;
+}
+
+.main-banner__button:hover{
+  background: rgb(219, 189, 127);
 }
